# gpu-accelerated-raytracer

./: Cargo.toml  README.org  camera.json  cube.glb  cube.json  export.py  scene.json
src/: deserialize.rs  main.rs  scene.rs  shader.wgsl  state.rs
src/scene/: gltf.rs  mod.rs
